# OcarinaLNK

./: .gitignore  CMakeLists.txt  GUIDE.md  INSTALL.md  README.md
cmake/: olnk.pc.in
docs/: CMakeLists.txt  Doxygen.i  frontend.md  frontned.md
docs/manual/: chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md
examples/: README.md
examples/elf-wasm/: main.c  run.sh
examples/elf-x86_64/: main.c  run.sh  twice.c
examples/macho-aarch64/: main.c  run.sh
examples/minimal-elf/: helper.c  main.c  run.sh
examples/pe-wasm/: main.c  run.sh
examples/profile-aliased/: main.c  profile.json  run.sh
examples/profile-driven/: main.c  profile.json  run.sh
formats/: CMakeLists.txt  ELF.lua  Mach-O.lua  PE.lua  WASM.lua
include/olnk/: olnk-api.h  olnk-format.h  olnk-ir.h  olnk-machine.h  olnk-plugin.h  olnk-version.h
machines/: Aarch64.lua  CMakeLists.txt  WASM.lua  x86-64.lua
man/man1/: olnk.1  olnkidl.1  olnkquery.1
man/man3/: olnk-api.3  olnk-format.3  olnk-ir.3  olnk-machine.3  olnk-plugin.3  olnk-version.3
plugins/: CMakeLists.txt  append-stub.cpp  dump-symtbl.cpp  dwarf-embeddings.cpp  identical-code-folding.cpp  linker-map-generation.cpp  visualization.cpp
scripts/: ARM-CortexM-BareMetal.lua  BasicELF-x86-64.lua  BasicMachOExecutable.lua  CMakeLists.txt  CustomSectionMerging.lua  ELF-SharedLibrary.lua  MultiTargetConfig.lua  load_formats.lua  load_machines.lua  registry_paths.lua  run_plugins.lua
src/: main.cpp
src/olnk/: api.cpp  cli.cpp  compute_offsets.cpp  diagnostics.cpp  file_io.cpp  format.cpp  format_serializer.cpp  handle_header.cpp  hash.cpp  incremental.cpp  ir.cpp  ir_builder.cpp  ir_visitor.cpp  linker.cpp  lua_bindings.cpp  lua_format.cpp  lua_global_utils.cpp  lua_linker_script.cpp  lua_machine.cpp  machine.cpp  memory_map.cpp  output_builder.cpp  plugin.cpp  relocation.cpp  section_handler.cpp  symbols_table.cpp  threading.cpp
src/olnk/internal/: ir_model.h
tests/: run.sh  run_fuzz.sh  run_unit.sh
tests/unittest/: azma_smoke.c  check_plugins.py  test_cli_klyspec.py  test_real_linker_smoke.sh
